Wireshark doesn't calculate the right IPv4 destination using source routing options when bad options precede them
This issue was migrated from bug 7043 in our old bug tracker.
Original bug information:
Reporter: boa…@gma…
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Windows 7
Platform: x86-64
Version: 1.6.6
Attachments:
wrong_destination.pcap: IPv4 packet with strict source routing option following an internet timestamp option with length < 5.